--- a/04_string_example/index.html
+++ b/04_string_example/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplos de String</title>
+    <title>Ejemplos de string</title>
 </head>
 
 <body>
@@ -12,13 +12,10 @@
         <h1>Uso de string</h1>
         <p>Ejercicio con nombre</p>
         <button onclick="usarString()">Manipulando Nombre</button>
-    </div>
-    
-    <div>
+        <div>
         <p>Ejercicio con apellido</p>
         <button onclick="manipulandoApellido()">Manipulando apellido</button>
     </div>
     <script src="static/js/script.js"></script>
 </body>
-
 </html>
