--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -22,10 +22,14 @@
         <button onclick="compararNumeros()">comparar Numeros</button>
         <p>Ejercicio n°6</p>
         <button onclick="note()">calificacion</button>
-         <p>Ejercicio n°7</p>
+        <p>Ejercicio n°7</p>
         <button onclick="usuarioAdmin()">usuario</button>
         <p>Ejercicio n°8</p>
         <button onclick="palabraMayuscula()">ingresar palabra</button>
+        <p>Ejercicio n°9</p>
+        <button onclick="precioDescuento()">ingresar precio</button>
+        <p>Ejercicio n°10</p>
+        <button onclick="ingresarUsuario()">ingresar usuario</button>
     </main>
     <script src="static/js/script.js"></script>
 
