--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -29,7 +29,7 @@
         <p>Ejercicio n°9</p>
         <button onclick="precioDescuento()">ingresar precio</button>
         <p>Ejercicio n°10</p>
-        <button onclick="ingresarUsuario()">ingresar usuario</button>
+        <button onclick="ingresarUsuario()">ingresar licencia</button>
     </main>
     <script src="static/js/script.js"></script>
 
