--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -27,9 +27,15 @@
         <p>Ejercicio n°8</p>
         <button onclick="palabraMayuscula()">ingresar palabra</button>
         <p>Ejercicio n°9</p>
-        <button onclick="precioDescuento()">ingresar precio</button>
+        <button onclick="ingresarPrecio()">ingresar precio</button>
         <p>Ejercicio n°10</p>
         <button onclick="ingresarUsuario()">ingresar licencia</button>
+        <!-- segunda parte -->
+        <p>Ejercicio n°11</p>
+        <button onclick="ingresarPalabra()">ingresar dos palabras</button>
+        <p>Ejercicio n°12</p>
+        <button onclick="ingresarCorreo">ingresar correo electronico</button>
+
     </main>
     <script src="static/js/script.js"></script>
 
