--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -29,13 +29,14 @@
         <p>Ejercicio n°9</p>
         <button onclick="ingresarPrecio()">ingresar precio</button>
         <p>Ejercicio n°10</p>
-        <button onclick="ingresarUsuario()">ingresar licencia</button>
+        <button onclick="licenciaEdad()">ingresar licencia</button>
         <!-- segunda parte -->
         <p>Ejercicio n°11</p>
         <button onclick="ingresarPalabra()">ingresar dos palabras</button>
         <p>Ejercicio n°12</p>
-        <button onclick="ingresarCorreo">ingresar correo electronico</button>
-
+        <button onclick="ingresarCorreo()">ingresar correo electronico</button>
+        <p>Ejercicio n°13</p>
+        <button onclick="ingresarNumero()">ingresar numero</button>
     </main>
     <script src="static/js/script.js"></script>
 
