--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -32,11 +32,14 @@
         <button onclick="licenciaEdad()">ingresar licencia</button>
         <!-- segunda parte -->
         <p>Ejercicio n°11</p>
-        <button onclick="ingresarPalabra()">ingresar dos palabras</button>
+        <button onclick="encontrarPalabraLarga()">ingresar dos palabras</button>
         <p>Ejercicio n°12</p>
         <button onclick="ingresarCorreo()">ingresar correo electronico</button>
         <p>Ejercicio n°13</p>
         <button onclick="ingresarNumero()">ingresar numero</button>
+        <p>Ejercicio n°14</p>
+        <button onclick="ingresarHora()">ingresar hora</button>
+        <p>Ejercicio n</p>
     </main>
     <script src="static/js/script.js"></script>
 
