--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -39,11 +39,10 @@
         <button onclick="ingresarNumero()">ingresar numero</button>
         <p>Ejercicio n°14</p>
         <button onclick="ingresarHora()">ingresar hora</button>
-        <p>Ejercicio n</p>
+        <p>Ejercicio nº15</p>
+        <button onclick="ingresarPalabra()">ingrese una palabra</button>
     </main>
     <script src="static/js/script.js"></script>
-
-
 
 </body>
 
