--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -10,6 +10,7 @@
 <body>
     <main>
         <h1>Uso de condiciones</h1>
+        <!-- primera parte -->
         <p>Ejercicio nº1</p>
         <button onclick=" edadVotar()">Aprobar Edad para votar</button>
         <p>Ejercicio nº2</p>
@@ -34,7 +35,7 @@
         <p>Ejercicio n°11</p>
         <button onclick="encontrarPalabraLarga()">ingresar dos palabras</button>
         <p>Ejercicio n°12</p>
-        <button onclick="ingresarCorreo()">ingresar correo electronico</button>
+        <button onclick="validarCorreo()">Verificar Email</button>
         <p>Ejercicio n°13</p>
         <button onclick="ingresarNumero()">ingresar numero</button>
         <p>Ejercicio n°14</p>
