--- a/05_condiciones_if-else/index.html
+++ b/05_condiciones_if-else/index.html
@@ -5,46 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplos de String</title>
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body>
     <main>
         <h1>Uso de condiciones</h1>
         <!-- primera parte -->
-        <p>Ejercicio nº1</p>
-        <button onclick=" edadVotar()">Aprobar Edad para votar</button>
-        <p>Ejercicio nº2</p>
-        <button onclick="contraseñaValida()">Validar contraseña</button>
-        <p>Ejercicio n°3</p>
-        <button onclick="num()">ingresar numero</button>
-        <p>Ejercicio n°4</p>
-        <button onclick="ingresarTemperatura()">temperatura</button>
-        <p>Ejercicio n°5</p>
-        <button onclick="compararNumeros()">comparar Numeros</button>
-        <p>Ejercicio n°6</p>
-        <button onclick="note()">calificacion</button>
-        <p>Ejercicio n°7</p>
-        <button onclick="usuarioAdmin()">usuario</button>
-        <p>Ejercicio n°8</p>
-        <button onclick="palabraMayuscula()">ingresar palabra</button>
-        <p>Ejercicio n°9</p>
-        <button onclick="ingresarPrecio()">ingresar precio</button>
-        <p>Ejercicio n°10</p>
-        <button onclick="licenciaEdad()">ingresar licencia</button>
+        <!-- fila 1 -->
+        <div class="fila-1">
+            <!-- row -->
+            <div class="row">
+                <p>Ejercicio nº1</p>
+                <button onclick=" edadVotar()">Aprobar Edad para votar</button>
+                <p>Ejercicio nº2</p>
+                <button onclick="contraseñaValida()">Validar contraseña</button>
+                <p>Ejercicio n°3</p>
+                <button onclick="num()">ingresar numero</button>
+                <p>Ejercicio n°4</p>
+                <button onclick="ingresarTemperatura()">temperatura</button>
+                <p>Ejercicio n°5</p>
+                <button onclick="compararNumeros()">comparar Numeros</button>
+            </div>
+        </div>
+        <!-- fila-2 -->
+        <div class="fila-2">
+            <!-- row -->
+            <div class="row">
+                <p>Ejercicio n°6</p>
+                <button onclick="note()">calificacion</button>
+                <p>Ejercicio n°7</p>
+                <button onclick="usuarioAdmin()">usuario</button>
+                <p>Ejercicio n°8</p>
+                <button onclick="palabraMayuscula()">ingresar palabra</button>
+                <p>Ejercicio n°9</p>
+                <button onclick="ingresarPrecio()">ingresar precio</button>
+                <p>Ejercicio n°10</p>
+                <button onclick="licenciaEdad()">ingresar licencia</button>
+            </div>
+        </div>
         <!-- segunda parte -->
-        <p>Ejercicio n°11</p>
-        <button onclick="encontrarPalabraLarga()">ingresar dos palabras</button>
-        <p>Ejercicio n°12</p>
-        <button onclick="validarCorreo()">Verificar Email</button>
-        <p>Ejercicio n°13</p>
-        <button onclick="ingresarNumero()">ingresar numero</button>
-        <p>Ejercicio n°14</p>
-        <button onclick="ingresarHora()">ingresar hora</button>
-        <p>Ejercicio nº15</p>
-        <button onclick="ingresarPalabra()">ingrese una palabra</button>
+        <!-- fila 3 -->
+        <div class="fila-3">
+            <!-- row -->
+             <div class="row">
+            <p>Ejercicio n°11</p>
+            <button onclick="encontrarPalabraLarga()">ingresar dos palabras</button>
+            <p>Ejercicio n°12</p>
+            <button onclick="validarCorreo()">Verificar Email</button>
+            <p>Ejercicio n°13</p>
+            <button onclick="ingresarNumero()">ingresar numero</button>
+            <p>Ejercicio n°14</p>
+            <button onclick="ingresarHora()">ingresar hora</button>
+            <p>Ejercicio nº15</p>
+            <button onclick="ingresarPalabra()">ingrese una palabra</button>
+            </div>
+        </div>
     </main>
     <script src="static/js/script.js"></script>
 
 </body>
 
 </html>
+
+<!-- prompt ´permite aparecer una barra en el buscador para ingresar texto -->
