--- a/burger_king/index.html
+++ b/burger_king/index.html
@@ -26,7 +26,7 @@
             <!-- icono -->
             <div class="enlaces">
                 <div class="lista">
-                    <a href="#" class="icon-list"><i class="bi bi-list"></i></a>
+                    <a href="#" class="icon-list"><i class="bi bi-list icono-menu"></i></a>
                     <a href="#" class="link-1"><strong>Pide aquí</strong></a>
                     <a href="#" class="link-1"><strong>Restaurantes</strong></a>
                     <a href="#" class="link-1"><strong>Mi BK</strong></a>
