--- a/burger_king/index.html
+++ b/burger_king/index.html
@@ -64,7 +64,7 @@
                 <!-- caja 1 -->
                 <div class="caja">
                     <img src="static/images/imagen-1.png" alt="imagen 1" class="img-caja" id="img-1">
-                    <div <div class="description">
+                    <div class="description">
                         <h2><span>Pide en el local más cercano mi rey</span></h2>
                         <p><span>Disfruta la mejor experiencia pidiendo por Mi BK activando tu geolocalización cada
                                 vez
