--- a/burger_king/index.html
+++ b/burger_king/index.html
@@ -167,7 +167,7 @@
         </div>
     </div>
     <div class="container-2">
-        <img src="static/images/img-telefono.png" alt="imagen de un telefono" class="phone"">
+        <img src="static/images/img-telefono.png" alt="imagen de un telefono" class="phone">
             <!-- contenido -->
              <div class=" dowload">
         <h2 class="text-tiendas"><span><strong>Descagar nuestrab APP y descrubre las increíbles ofertas que tenemos
