--- a/burger_king/index.html
+++ b/burger_king/index.html
@@ -168,23 +168,24 @@
     </div>
     <div class="container-2">
         <img src="static/images/img-telefono.png" alt="imagen de un telefono" class="phone">
-            <!-- contenido -->
-             <div class=" dowload">
-        <h2 class="text-tiendas"><span><strong>Descagar nuestrab APP y descrubre las increíbles ofertas que tenemos
-                    para ti.cupones y ofertas!</strong></span></h2>
+        <!-- contenido -->
+        <div class=" dowload">
+            <h2 class="text-tiendas"><span><strong>Descagar nuestrab APP y descrubre las increíbles ofertas que tenemos
+                        para ti.cupones y ofertas!</strong></span></h2>
 
-        <!-- tiendas -->
-        <div class="tiendas">
-            <a href="#"> <img src="static/images/logo-apple.svg" alt="app store" class="app-store"></a>
-            <a href="#"><img src=" static/images/play-store.png" alt="play store" class="play-store"></a>
+            <!-- tiendas -->
+            <div class="tiendas">
+                <a href="#"> <img src="static/images/logo-apple.svg" alt="app store" class="app-store"></a>
+                <a href="#"><img src=" static/images/play-store.png" alt="play store" class="play-store"></a>
+            </div>
+            <p><span>Apple y el logotipo de Apple son marcas comerciales de Appke Insc., registradas en EE.
+                    UU. y otros
+                    países.
+                    App store es una marca de servicios de Apple Inc. Google Play es una marca comercial de Google Inc.
+                    Se
+                    aplican términos.</span>
+            </p>
         </div>
-        <p><span>Apple y el logotipo de Apple son marcas comerciales de Appke Insc., registradas en EE.
-                UU. y otros
-                países.
-                App store es una marca de servicios de Apple Inc. Google Play es una marca comercial de Google Inc. Se
-                aplican términos.</span>
-        </p>
-    </div>
     </div>
     <!-- pie de pagina -->
     <footer>
