--- a/07_columnas_flex/index.html
+++ b/07_columnas_flex/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial">
     <!-- autor del documento -->
-     <meta name="author" content="martinacevedo@liceovvh.cl">
-
-
+    <meta name="author" content="martinacevedo@liceovvh.cl">
     <title>columnas flex</title>
     <!-- estilo css -->
-     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
+
 <body>
     <!-- contenedor -->
     <div class="container">
         <!-- fila 1 -->
-     <div class="row">
-       <div class="col">1/4</div>
-       <div class="col">1/4</div>
-       <div class="col">1/4</div>
-       <div class="col">1/4</div>
-   </div>
-<!-- fila 2 -->
-   <div class="row">
-       <div class="col">1/3</div>
-       <div class="col col-2">2/3</div>
-   </div>
-<!-- fila 3 -->
-   <div class="row">
-       <div class="col col-2">2/5</div>
-       <div class="col col-3">3/5</div>
-   </div>
-   </div>
+        <div class="row">
+            <div class="col">1/4</div>
+            <div class="col">1/4</div>
+            <div class="col">1/4</div>
+            <div class="col">1/4</div>
+        </div>
+        <!-- fila 2 -->
+        <div class="row">
+            <div class="col">1/3</div>
+            <div class="col col-2">2/3</div>
+        </div>
+        <!-- fila 3 -->
+        <div class="row">
+            <div class="col col-2">2/5</div>
+            <div class="col col-3">3/5</div>
+        </div>
+    </div>
 </body>
+
 </html>
