--- a/09_condiciones_repaso_JS/index.html
+++ b/09_condiciones_repaso_JS/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    <header></header>
-    <h1>Ejercicios condicionales JS</h1>
+    <header>
+        <h1>Ejercicios condicionales JS</h1>
+    </header>
     <main class="container">
         <!-- boton 1 -->
         <button onclick="verificarEtapa()">Verificar etapa Vida</button>
@@ -21,12 +22,12 @@
         <button onclick="validarContraseña()">Validar contraseña</button>
         <button onclick="encontrarLetra()">Encontrar letra E</button>
         <button onclick="ingresarNumeros()">dos números</button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button onclick="parImpar()">Par o impar</button>
+        <button onclick="palabraInicial()">Ingresar palabra</button>
+        <button onclick="tempAmbiente()">Ingrese temperatura</button>
+        <button onclick="pedirNombre()">Ingresar nombre</button>
+        <button onclick="pedirNota()">Ingresar nota</button>
+        <button onclick="palabraClave()">Ingresar palabra clave</button>
     </main>
 
 
