--- a/10_bucles_while_for/index.html
+++ b/10_bucles_while_for/index.html
@@ -25,11 +25,24 @@
       <hr>
       <h2>Ejercicios</h2>
       <!-- ejercicio 1 -->
+       <h2>Ejercicio 1</h2>
        <p>Contar progresivamente</p>
        <button onclick="contarHastaN()">Ingresar numero</button>
+       <hr>
        <!-- Ejercicio 2 -->
+        <h2>Ejercicio 2</h2>
         <p>Contar regresivamente</p>
-        <button onclick="contadorRegresivo()">Ingresar numero</button>
+        <button onclick="cuentaRegresivo()">Ingresar numero</button>
+        <hr>
+        <!-- ejecicio 3 -->
+        <h2>Ejercicio 3</h2>
+        <p>Sumar numeros</p>
+        <button onclick="sumarNumero()">Ingresar numero</button>
+        <hr>
+        <!-- ejercicio 4 -->
+         <h2>Ejercicio 4</h2>
+         <p>Imprimir multiplos de 2</p>
+         <button onclick="imprimirMultiplo()">Ingresar numero</button>
     </section>
   </main>
 
