--- a/10_bucles_while_for/index.html
+++ b/10_bucles_while_for/index.html
@@ -42,7 +42,7 @@
         <!-- ejercicio 4 -->
          <h2>Ejercicio 4</h2>
          <p>Imprimir multiplos de 2</p>
-         <button onclick="imprimirMultiplo()">Ingresar numero</button>
+         <button onclick="imprimirMultiplo()">Ingresar multiplos</button>
     </section>
   </main>
 
