--- a/10_bucles_while_for/index.html
+++ b/10_bucles_while_for/index.html
@@ -23,27 +23,34 @@
       <h2>Ejemplo for</h2>
       <button onclick="ejecutarFor()">Ejecutar For</button>
       <hr>
-      <h2>Ejercicios</h2>
+      <h2>Ejercicios while:</h2>
       <!-- ejercicio 1 -->
-       <h2>Ejercicio 1</h2>
-       <p>Contar progresivamente</p>
-       <button onclick="contarHastaN()">Ingresar numero</button>
-       <hr>
-       <!-- Ejercicio 2 -->
-        <h2>Ejercicio 2</h2>
-        <p>Contar regresivamente</p>
-        <button onclick="cuentaRegresivo()">Ingresar numero</button>
-        <hr>
-        <!-- ejecicio 3 -->
-        <h2>Ejercicio 3</h2>
-        <p>Sumar numeros</p>
-        <button onclick="sumarNumero()">Ingresar numero</button>
-        <hr>
-        <!-- ejercicio 4 -->
-         <h2>Ejercicio 4</h2>
-         <p>Imprimir multiplos de 2</p>
-         <button onclick="imprimirMultiplo()">Ingresar multiplos</button>
+      <h2>Ejercicio 1</h2>
+      <p>Contar progresivamente</p>
+      <button onclick="contarHastaN()">Ingresar numero</button>
+      <hr>
+      <!-- Ejercicio 2 -->
+      <h2>Ejercicio 2</h2>
+      <p>Contar regresivamente</p>
+      <button onclick="cuentaRegresivo()">Ingresar numero</button>
+      <hr>
+      <!-- ejecicio 3 -->
+      <h2>Ejercicio 3</h2>
+      <p>Sumar numeros</p>
+      <button onclick="sumarNumero()">Ingresar numero</button>
+      <hr>
+      <!-- ejercicio 4 -->
+      <h2>Ejercicio 4</h2>
+      <p>Imprimir multiplos de 2</p>
+      <button onclick="imprimirMultiplo()">Ingresar multiplos</button>
+      <hr>
     </section>
+    <!-- bucle for -->
+      <h2>ejercicios for:</h2>
+      <!-- ejercicio 1 -->
+      <h2>ejercicio 1</h2>
+      <p>Tabla de multiplicar</p>
+      <button onclick="tablaMultiplicar()">Ingresar numero</button>
   </main>
 
 
