--- a/10_bucles_while_for/index.html
+++ b/10_bucles_while_for/index.html
@@ -46,11 +46,31 @@
       <hr>
     </section>
     <!-- bucle for -->
-      <h2>ejercicios for:</h2>
-      <!-- ejercicio 1 -->
-      <h2>ejercicio 1</h2>
-      <p>Tabla de multiplicar</p>
-      <button onclick="tablaMultiplicar()">Ingresar numero</button>
+    <h2>ejercicios for:</h2>
+    <!-- ejercicio 1 -->
+    <h2>ejercicio 1</h2>
+    <p>Tabla de multiplicar</p>
+    <button onclick="tablaMultiplicar()">Ingresar numero</button>
+    <hr>
+    <!-- ejercicio 2 -->
+    <h2>ejercicio 2</h2>
+    <p>Buscar pares</p>
+    <button onclick="par()">Ingresar numero</button>
+    <hr>
+    <!-- ejercicio 3 -->
+    <h2>ejercicio 3</h2>
+    <p>contador de letras</p>
+    <button onclick="contadorLetra()">Ingresar palabra</button>
+    <hr>
+    <!-- ejercicio 4 -->
+     <h2>ejercicio 4</h2>
+     <p>calcular factorial</p>
+     <button onclick="numeroFactorial()">Ingesar numero</button>
+     <hr>
+     <!-- ejercicio 5 -->
+      <h2>ejercicio 5</h2>
+      <p>sumar numeros impares</p>
+      <button onclick="impar()">Ingresar numero</button>
   </main>
 
 
