--- a/11_practica_diagrama_t/index.html
+++ b/11_practica_diagrama_t/index.html
@@ -38,6 +38,15 @@
      <h2>numeros impares</h2>
     <button onclick="numerosImpares()">Ingresar numero</button>
 
+    <!-- ejericio 8 -->
+         <h2>numeros por teclado</h2>
+    <button onclick="numeroLeido()">Ingresar numero</button>
+
+
+        <!-- ejericio 9 -->
+         <h2>numeros por teclado hasta N</h2>
+    <button onclick="numeroLeidoN()">Ingresar numero</button>
+
     <!-- conexion con el js -->
     <script src="js/script.js"></script>
 </body>
