--- a/11_practica_diagrama_t/index.html
+++ b/11_practica_diagrama_t/index.html
@@ -27,26 +27,32 @@
     <button onclick="calcularPromedio()">Ingresar numeros</button>
 
     <!-- ejercicio 5 -->
-     <h2>numeros naturales</h2>
+    <h2>numeros naturales</h2>
     <button onclick="numerosNaturales()">Ingresar numero</button>
 
     <!-- ejercicio 6 -->
-     <h2>numeros pares</h2>
+    <h2>numeros pares</h2>
     <button onclick="numerosPares()">Ingresar numero</button>
 
     <!-- ejercicio 7 -->
-     <h2>numeros impares</h2>
+    <h2>numeros impares</h2>
     <button onclick="numerosImpares()">Ingresar numero</button>
 
     <!-- ejericio 8 -->
-         <h2>numeros por teclado</h2>
+    <h2>numeros por teclado</h2>
     <button onclick="numeroLeido()">Ingresar numero</button>
 
 
-        <!-- ejericio 9 -->
-         <h2>numeros por teclado hasta N</h2>
+    <!-- ejericio 9 -->
+    <h2>numeros por teclado hasta N</h2>
     <button onclick="numeroLeidoN()">Ingresar numero</button>
 
+
+    <!-- ejericio 10 -->
+    <h2>calcular numeros con todas las operaciones basicas</h2>
+    <button onclick="operacionMultiple()">Ingresar numeros</button>
+
+    
     <!-- conexion con el js -->
     <script src="js/script.js"></script>
 </body>
